--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ loader_version=0.8.2+build.194
 # Mod Properties
 mod_version=0.1.0
 maven_group=amerebagatelle.github.io
-archives_base_name=Thresher
+archives_base_name=Thresher-1.15
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.10.1+build.307-1.15
